ADDED: Assignment & Assignment UI
