# backend/src/routes/assignment.route.js
@@ -5,10 +5,8 @@ const authenticate = require("../middleware/authenticate");
 router
   .route("/")
   .get(authenticate, assignmentControllers.find)
-  .post(authenticate, assignmentControllers.create);
-
-router
-  .route("/:id")
-  .get(authenticate, assignmentControllers.findSingle)
+  .post(authenticate, assignmentControllers.create)
   .delete(authenticate, assignmentControllers.destroy);
+
+router.route("/:id").get(authenticate, assignmentControllers.findSingle);
 module.exports = router;
